fix(alert): toggleShow func added, removed from button comp,updated sb

--- a/stories/components/Alert.stories.mdx
+++ b/stories/components/Alert.stories.mdx
@@ -45,17 +45,27 @@ import "../../lib/CloseButton";
       table: { category: "props", type: { summary: "string" } },
       description: "Sets the aria-label for alert close button",
     },
-    "sgds-close": {
+    "sgds-hide": {
       description: "Emitted event when dismissible button is clicked",
       table: {
         category: `Event: SgdsAlert`,
       },
     },
-    "sgds-open": {
+    "sgds-show": {
       description:
         "Emitted event with toggleShow method when sgds-button is clicked",
       table: {
         category: `Event: SgdsAlert`,
+      },
+    },
+    toggleShow: {
+      control: "disable",
+      description: "When invoked, shows the alert message",
+      table: {
+        category: "methods: SgdsAlert",
+        type: {
+          summary: "function",
+        },
       },
     },
   }}
@@ -69,7 +79,21 @@ export const Template = (args) =>
       .variant=${args.variant}
       .show=${args.show}
       .closeLabel=${args.closeLabel}
-      ><sl-icon name="info-circle" class="flex-shrink-0 me-4"></sl-icon>
+      ><svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="16"
+        height="16"
+        fill="currentColor"
+        class="bi bi-info-circle flex-shrink-0 me-4 align-self-start mt-2"
+        viewBox="0 0 16 16"
+      >
+        <path
+          d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
+        />
+        <path
+          d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"
+        />
+      </svg>
       <div>
         This is an Alert component. You may add the dismissible option.
       </div></sgds-alert
@@ -79,7 +103,21 @@ export const Template = (args) =>
 export const TemplateLinks = (args) =>
   html`
     <sgds-alert alertClasses="d-flex align-items-center">
-      <sl-icon name="info-circle" class="flex-shrink-0 me-4"></sl-icon>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="16"
+        height="16"
+        fill="currentColor"
+        class="bi bi-info-circle flex-shrink-0 me-4 align-self-start mt-2"
+        viewBox="0 0 16 16"
+      >
+        <path
+          d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
+        />
+        <path
+          d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"
+        />
+      </svg>
       <div>
         This is a primary alert with&nbsp;<a class="alert-link"
           >an example link</a
@@ -91,10 +129,21 @@ export const TemplateLinks = (args) =>
 export const TemplateAddContent = (args) =>
   html`
     <sgds-alert variant="success" alertClasses="d-flex align-items-center">
-      <sl-icon
-        name="info-circle"
-        class="flex-shrink-0 me-4 align-self-start mt-2"
-      ></sl-icon>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="16"
+        height="16"
+        fill="currentColor"
+        class="bi bi-info-circle flex-shrink-0 me-4 align-self-start mt-2"
+        viewBox="0 0 16 16"
+      >
+        <path
+          d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
+        />
+        <path
+          d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"
+        />
+      </svg>
       <div>
         <h4 class="alert-heading">Hey, nice to see you</h4>
         <p>
@@ -118,16 +167,40 @@ export const TemplateWithButton = (args) =>
       variant="warning"
       alertClasses="d-flex align-items-center"
       dismissible
-      ><sl-icon name="info-circle" class="flex-shrink-0 me-4"></sl-icon>
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="16"
+        height="16"
+        fill="currentColor"
+        class="bi bi-info-circle flex-shrink-0 me-4 align-self-start mt-2"
+        viewBox="0 0 16 16"
+      >
+        <path
+          d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
+        />
+        <path
+          d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"
+        />
+      </svg>
       <div>
-        This is an Alert component. You may add the dismissible option.
-      </div></sgds-alert
-    >
-    <br />
-    <sgds-button variant="danger" refId="alertExample" methodType="toggleShow"
-      >Show Alert</sgds-button
-    >
+        <h4>Oh snap, you got an error!</h4>
+        <p>
+          Aww yeah, you successfully read this important alert message. This
+          example text is going to run a bit longer so that you can see how
+          spacing within an alert works with this kind of content.
+        </p>
+      </div>
+    </sgds-alert>
+    <sgds-button variant="danger" @click=${toggleShow}>
+      Show Alert
+    </sgds-button>
   `;
+
+export const toggleShow = () => {
+  const alert = document.querySelector("#alertExample");
+  alert.toggleShow();
+};
 
 # Alert
 
@@ -144,6 +217,45 @@ Provide contextual feedback messages for typical user actions with the handful o
 ## API
 
 <ArgsTable story='Basic' />
+
+## Basic with Icon
+
+Alerts are available for any length of text, as well as an optional dismiss button. For proper styling, use one of the eight variant colors provided. You may also choose to slot in your icons from any libraries to make your information clearer and user-friendly.
+
+export const variants = [
+  "primary",
+  "secondary",
+  "success",
+  "danger",
+  "warning",
+  "info",
+  "light",
+];
+
+<Canvas>
+  <Story name='Basic with Icon'>
+    ${variants.map((variant) => {
+      return html` <sgds-alert variant="${variant}" alertClasses="d-flex align-items-center">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="16"
+        height="16"
+        fill="currentColor"
+        class="bi bi-info-circle flex-shrink-0 me-4 align-self-start mt-2"
+        viewBox="0 0 16 16"
+      >
+        <path
+          d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
+        />
+        <path
+          d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"
+        />
+      </svg>This is a ${variant} alert—check
+          it out!
+    </sgds-alert>`;
+    })}
+  </Story>
+</Canvas>
 
 ## Links
 
@@ -163,7 +275,7 @@ Alerts can contain whatever content you like. Headers, paragraphs, dividers etc.
 
 ## Dismissible
 
-Add the dismissible prop to add a dismiss button to the Alert. An `sgds-button` with id reference `refId` prop to the alert can also be used to show the dismissed alert with `methodType` prop of value `toggleShow`.
+Add the dismissible prop to add a dismiss button to the Alert. Here is an example of an `sgds-button` to trigger the alert message using `toggleShow` method.
 
 <Canvas>
   <Story
