--- a/stories/templates/ActionCard/additional.mdx
+++ b/stories/templates/ActionCard/additional.mdx
@@ -1,29 +1,28 @@
-export const TemplateType = (args) =>
+export const TemplateType = args =>
   html`
-  <div class="col">
-    <sgds-action-card
-      type="radio"
-    >
-      <span slot="card-subtitle">${args.cardSubtitleSlot}</span>
-      <span slot="card-title">${args.cardTitleSlot}</span>
-      <span slot="card-text">${args.cardTextSlot}</span>
-    </sgds-action-card>
-  <div>
-  <div class="col">
-    <sgds-action-card
-      type="checkbox"
-    >
-      <span slot="card-subtitle">${args.cardSubtitleSlot}</span>
-      <span slot="card-title">${args.cardTitleSlot}</span>
-      <span slot="card-text">${args.cardTextSlot}</span>
-    </sgds-action-card>
-  <div>
-`;
+    <div class="col">
+      <sgds-action-card type="radio">
+        <span slot="card-subtitle">Laptop</span>
+        <span slot="card-title">Apple</span>
+        <span slot="card-text">Macbook Pro M1</span>
+      </sgds-action-card>
+      <div>
+        <div class="col">
+          <sgds-action-card type="checkbox">
+            <span slot="card-subtitle">Laptop</span>
+            <span slot="card-title">Apple</span>
+            <span slot="card-text">Macbook Pro M1</span>
+          </sgds-action-card>
+          <div></div>
+        </div>
+      </div>
+    </div>
+  `;
 
 ## Type
 
 Use `type` prop : `radio` / `checkbox` to change the selectable card input type
 
 <Canvas>
-  <Story name='Type'>{TemplateType.bind({})}</Story>
+  <Story name="Type">{TemplateType.bind({})}</Story>
 </Canvas>
