feat(action-card): add form functionalities and handle radio behaviours when action-card is a radio

--- a/stories/templates/ActionCard/additional.mdx
+++ b/stories/templates/ActionCard/additional.mdx
@@ -1,11 +1,25 @@
 export const TemplateType = args =>
   html`
     <div class="col">
+    <form> 
+    <sgds-radio-group>
       <sgds-action-card type="radio">
         <span slot="card-subtitle">Laptop</span>
         <span slot="card-title">Apple</span>
         <span slot="card-text">Macbook Pro M1</span>
       </sgds-action-card>
+      <sgds-action-card type="radio">
+        <span slot="card-subtitle">Laptop</span>
+        <span slot="card-title">Apple</span>
+        <span slot="card-text">Macbook Pro M1</span>
+      </sgds-action-card>
+      <sgds-action-card type="radio">
+        <span slot="card-subtitle">Laptop</span>
+        <span slot="card-title">Apple</span>
+        <span slot="card-text">Macbook Pro M1</span>
+      </sgds-action-card>
+      </sgds-radio-group>
+      </form>
       <div>
         <div class="col">
           <sgds-action-card type="checkbox">
