docs(*): remove id from stories

--- a/stories/templates/ActionCard/additional.mdx
+++ b/stories/templates/ActionCard/additional.mdx
@@ -29,5 +29,5 @@ export const TemplateType = args =>
 Use `SgdsRadioGroup` as a wrapper to enable radio behaviour.
 
 <Canvas>
-  <Story name="Type">{TemplateType.bind({})}</Story>
+  <Story name="Action Card as Radio">{TemplateType.bind({})}</Story>
 </Canvas>
