feat(stepper): add events and reset method

--- a/stories/templates/Stepper/additional.mdx
+++ b/stories/templates/Stepper/additional.mdx
@@ -2,7 +2,7 @@ export const steps = ["Personal Details", "Address & Contact Information", "Addi
 
 export const StepperFormTemplate = ({ steps }) => {
   return html`
-    <sgds-stepper id="myStepper" .steps=${steps} activeStep="1">
+    <sgds-stepper id="myStepper" .steps=${steps} activestep="1">
       <div slot="step-1" class="mb-4">
         <div class="row">
           <div class="col mb-2">
