--- a/stories/templates/Stepper/additional.mdx
+++ b/stories/templates/Stepper/additional.mdx
@@ -1,8 +1,10 @@
-export const steps = ["Personal Details", "Address & Contact Information", "Additional Details"];
-
-export const StepperFormTemplate = ({ steps }) => {
+export const StepperFormTemplate = () => {
   return html`
-    <sgds-stepper id="myStepper" .steps=${steps} activestep="1">
+    <sgds-stepper
+      id="myStepper"
+      steps='["Personal Details", "Address & Contact Information", "Additional Details"]'
+      activestep="1"
+    >
       <div slot="step-1" class="mb-4">
         <div class="row">
           <div class="col mb-2">
@@ -38,22 +40,14 @@ export const StepperFormTemplate = ({ steps }) => {
         </div>
       </div>
     </sgds-stepper>
-    <div style="display:flex;justify-content:space-between;margin-top:2rem;">
+    <div style="display:flex;justify-content:space-between;">
       <div>
-        <sgds-button class="me-3"  variant="primary" @click="${nextStep}"
-          >Next</sgds-button
-        >
-        <sgds-button @click="${previousStep}" variant="secondary"
-          >Back</sgds-button
-        >
+        <sgds-button class="me-3" variant="primary" @click="${nextStep}">Next</sgds-button>
+        <sgds-button @click="${previousStep}" variant="secondary">Back</sgds-button>
       </div>
       <div>
-        <sgds-button class="m-2" variant="danger" @click="${firstStep}"
-          >Go to first page</sgds-button
-        >
-        <sgds-button class="m-2" variant="warning" @click="${lastStep}"
-          >Go to last page</sgds-button
-        >
+        <sgds-button class="m-2" variant="danger" @click="${firstStep}">Go to first page</sgds-button>
+        <sgds-button class="m-2" variant="warning" @click="${lastStep}">Go to last page</sgds-button>
       </div>
     </div>
   `;
@@ -79,12 +73,5 @@ export const firstStep = () => {
 ## Stepper in a form context
 
 <Canvas>
-  <Story
-    name="Example"
-    args={{
-      steps: ["Personal Details", "Address & Contact Information", "Additional Details"]
-    }}
-  >
-    {StepperFormTemplate.bind({})}
-  </Story>
+  <Story name="Example">{StepperFormTemplate.bind({})}</Story>
 </Canvas>
