--- a/stories/getting-started/Usage/Slots.stories.mdx
+++ b/stories/getting-started/Usage/Slots.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta, Description } from '@storybook/addon-docs';
-import Slots from '/docs/Stylings.md';
+import Slots from '/docs/Slots.md';
 
 <Meta title="Getting Started/Usage/Slots" />
 
