docs(stepper): add reset to example

--- a/stories/templates/Stepper/additional.mdx
+++ b/stories/templates/Stepper/additional.mdx
@@ -40,8 +40,9 @@ export const StepperFormTemplate = () => {
         </div>
       </div>
     </sgds-stepper>
-    <div style="display:flex;justify-content:space-between;">
+    <div style="display:flex;justify-content:space-between;margin-top:1rem;">
       <div>
+        <sgds-button class="me-3" variant="light" @click="${reset}">Reset</sgds-button>
         <sgds-button class="me-3" variant="primary" @click="${nextStep}">Next</sgds-button>
         <sgds-button @click="${previousStep}" variant="secondary">Back</sgds-button>
       </div>
@@ -53,6 +54,10 @@ export const StepperFormTemplate = () => {
   `;
 };
 
+export const reset = () => {
+  const stepper = document.querySelector("#myStepper");
+  stepper.reset()
+}
 export const nextStep = () => {
   const stepper = document.querySelector("#myStepper");
   stepper.nextStep();
