docs(stepper): add angular stackblitz example

--- a/stories/templates/Stepper/additional.mdx
+++ b/stories/templates/Stepper/additional.mdx
@@ -7,3 +7,9 @@ export const MockStepperTemplate = () => Object.assign(new MockStepper())
 <Canvas>
   <Story name="Example">{MockStepperTemplate.bind({})}</Story>
 </Canvas>
+
+## Working Example 
+
+### Angular 
+
+Please see a [working example of stepper on an Angular app](https://stackblitz.com/github/clukhei/angular-stepper)
