--- a/stories/templates/Pagination/additional.mdx
+++ b/stories/templates/Pagination/additional.mdx
@@ -1,15 +1,14 @@
+import { MockPagination } from "../../mocks/pagination.ts";
+
+export const MockPaginationTemplate = () => Object.assign(new MockPagination());
+
 ## Pagination with API sample
 
 The `<sgds-pagination>` component will include some props which is needed for the pagination to work. Users will be required to provide the data objects to be passed in as data length `dataLength`,
-a current page `currentPage` set as initial active, and set the number of data items to be rendered per page `itemsPerPage`. Below is a sample of pagination with a table formatted data.
-
-export const APITemplate = () => html`
-<sgds-button>Hello</sgds-button>
-  <sgds-table id="tablesample4"></sgds-table>
-  <sgds-pagination id="samplepage4" directionVariant="icon" dataLength="50"></sgds-pagination> `;
+a current page `currentPage` set as initial active, and set the number of data items to be rendered per page `itemsPerPage`. Listen to `sgds-page-change` event for page changes and populate back the logic to `sgds-table` component. Below is a sample of pagination with a table formatted data.
 
 <Canvas>
-  <Story name="API sample">{APITemplate.bind({})}</Story>
+  <Story name="API sample">{MockPaginationTemplate.bind({})}</Story>
 </Canvas>
 
 ## Alternative Sizes
