--- a/stories/templates/Datepicker/additional.mdx
+++ b/stories/templates/Datepicker/additional.mdx
@@ -10,15 +10,16 @@ export const RangeTemplate = () => html` <sgds-datepicker mode="range"></sgds-da
   </Story>
 </Canvas>
 
-## Flip
+## Calendar placement : `noFlip` and `drop`
 
 By default, the Popover component of DatePicker flips top and bottom depending on the space at the current placement. Turn it off, by setting `noFlip="true"`
 
-export const FlipTemplate = () =>
+export const FlipTemplate = args =>
   html`
     <div style="height:1000px;" class="d-flex justify-content-center align-items-center">
       <sgds-datepicker label="Flip disabled" mode="range" noFlip></sgds-datepicker>
       <sgds-datepicker label="Flip enabled" mode="range"></sgds-datepicker>
+      <sgds-datepicker label="Flip disabled, Drop=up" mode="range" drop="up" noFlip></sgds-datepicker>
     </div>
   `;
 
@@ -32,12 +33,20 @@ export const FlipTemplate = () =>
 
 ### single mode
 
-For default `mode="single"`, use the `initialValue` prop to set the initial value of input on first load. Note that by default dateFormat prop is DD/MM/YYYY. eg. `'["23/05/2023"]'` If dateFormat is passed in, change the initialValue accordingly.
+For default `mode="single"`, use the `initialValue` prop to set the initial value of in put on first load. Note that by default dateFormat prop is DD/MM/YYYY. eg. `'["23/05/2023"]'` If dateFormat is passed in, change the initialValue accordingly.
 
-export const SingleModeTemplate = () => html` <sgds-datepicker initialValue='["23/05/2023"]'></sgds-datepicker> `;
+export const SingleModeTemplate = args => {
+  return html`
+    <sgds-datepicker id="single-mode-example" .initialValue=${args.initialValue}></sgds-datepicker>
+    <script>
+      const datepicker = document.querySelector("#single-mode-example");
+      datepicker.initialValue = ["23/05/2023"];
+    </script>
+  `;
+};
 
 <Canvas>
-  <Story name="Initial Value for Single" height="500px">
+  <Story name="Initial Value for Single" height="500px" args={{ initialValue: ["23/05/2023"] }}>
     {SingleModeTemplate.bind({})}
   </Story>
 </Canvas>
@@ -46,11 +55,18 @@ export const SingleModeTemplate = () => html` <sgds-datepicker initialValue='["2
 
 For `mode="range"`, use the same `initialValue` prop to set the initial value of startDate and endDate. Note that by default dateFormat prop is DD/MM/YYYY. eg. `'["23/05/2023", "15/12/2023" ]'` If dateFormat is passed in, change the initialValue accordingly.
 
-export const RangeModeTemplate = () =>
-  html` <sgds-datepicker mode="range" initialValue='["23/05/2023","15/12/2023"]'></sgds-datepicker> `;
+export const RangeModeTemplate = args => {
+  return html`
+    <sgds-datepicker id="range-mode-example" mode="range" .initialValue=${args.initialValue}></sgds-datepicker>
+    <script>
+      const datepicker = document.querySelector("#range-mode-example");
+      datepicker.initialValue = ["23/05/2023", "15/12/2023"];
+    </script>
+  `;
+};
 
 <Canvas>
-  <Story name="Initial Value for Range" height="500px">
+  <Story name="Initial Value for Range" height="500px" args={{ initialValue: ["23/05/2023", "15/12/2023"] }}>
     {RangeModeTemplate.bind({})}
   </Story>
 </Canvas>
@@ -58,21 +74,29 @@ export const RangeModeTemplate = () =>
 ## minDate & maxDate
 
 When `minDate` is set, users can only select the specified date and dates beyond it. When `maxDate` is set. users can only select the specified date and dates before it. To pass in as ISOString format. eg. `minDate="2023-12-10T12:00:00.000Z" maxDate="2023-12-19T12:00:00.000Z"`
+It is recommended to set the calendar's display to be within the boundaries of `minDate` and `maxDate`. Use `displayDate` prop to control the calendar's display
 
-export const MinMaxTemplate = () =>{
-  const displayDate = new Date(2023, 5, 10)
+For better accesibility, include a hint text to let your users know what is the range of dates that they can choose from
+
+export const MinMaxTemplate = args => {
   return html`
     <sgds-datepicker
-      mode="range"
-      .displayDate=${displayDate}
+      id="min-max-example"
+      label="Choose a date"
+      hintText="The minimum date is 10 June 2023 and maximum date is 19 June 2023"
+      .displayDate=${args.displayDate}
       minDate="2023-06-10T12:00:00.000Z"
       maxDate="2023-06-19T12:00:00.000Z"
     ></sgds-datepicker>
+    <script>
+      const datepicker = document.querySelector("#min-max-example");
+      datepicker.displayDate = new Date(2023, 5, 10);
+    </script>
   `;
-}
+};
 
 <Canvas>
-  <Story name="Min and Max Date" height="500px">
+  <Story name="Min and Max Date" height="500px" args={{ displayDate: new Date(2023, 5, 10) }}>
     {MinMaxTemplate.bind({})}
   </Story>
 </Canvas>
