chore(*): update documentation folders

--- a/stories/getting-started/Usage/Extendable.stories.mdx
+++ b/stories/getting-started/Usage/Extendable.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from '@storybook/addon-docs';
 import Extendable from '/docs/Extendable.md';
 
-<Meta title="Getting Started/Extending the library" />
+<Meta title="Getting Started/Usage/Extending the library" />
 
 <Description markdown={Extendable} />
