chore(storybook): sidebar arrangements

--- a/stories/getting-started/Frameworks/Angular.stories.mdx
+++ b/stories/getting-started/Frameworks/Angular.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import Angular from "/docs/Angular.md";
 
-<Meta title="Frameworks/Angular" />
+<Meta title="Getting Started/Frameworks/Angular" />
 
 <Description markdown={Angular} />
