--- a/stories/getting-started/Frameworks/Next.stories.mdx
+++ b/stories/getting-started/Frameworks/Next.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import NextDocs from "/docs/Next.md";
 
-<Meta title="Frameworks/NextJS" />
+<Meta title="Getting Started/Frameworks/NextJS" />
 
 <Description markdown={NextDocs} />
