--- a/stories/getting-started/Frameworks/React.stories.mdx
+++ b/stories/getting-started/Frameworks/React.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import ReactDocs from "/docs/React.md";
 
-<Meta title="Frameworks/React" />
+<Meta title="Getting Started/Frameworks/React" />
 
 <Description markdown={ReactDocs} />
