--- a/stories/getting-started/Frameworks/Vue.stories.mdx
+++ b/stories/getting-started/Frameworks/Vue.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import Vue from "/docs/Vue.md";
 
-<Meta title="Frameworks/Vue" />
+<Meta title="Getting Started/Frameworks/Vue" />
 
 <Description markdown={Vue} />
